# Civitai-Manager

./: .gitignore  README.md  pyproject.toml
civitai_manager/: __init__.py
civitai_manager/core/: config.py  downloader.py  files.py
civitai_manager/routes/: downloads.py  local_files.py  search.py  settings.py
civitai_manager/static/: app.css  app.js
civitai_manager/templates/: index.html
